--- a/css/styles.css
+++ b/css/styles.css
@@ -10,15 +10,6 @@
   --hover-button-bg: #404bbf;
 }
 
-html {
-  box-sizing: border-box;
-}
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -43,6 +34,43 @@ body {
   margin: 0;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+button {
+  font-family: inherit;
+  border: none;
+  padding: 0;
+  background: transparent;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+address {
+  font-style: inherit;
+}
+
 .container {
   width: 1158px;
   padding: 0 15px;
@@ -51,8 +79,8 @@ body {
   outline: 2px solid lightgreen;
 }
 
-.list {
-  list-style: none;
+.section {
+  padding: 120px 0;
 }
 
 /* Header */
@@ -91,13 +119,13 @@ nav {
 .site-nav {
   display: flex;
   margin-left: 76px;
+  padding: 24px 0;
 }
 .site-nav .link {
   color: var(--primary-title-color);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
-  text-decoration: none;
 }
 
 .site-nav .item:not(:last-child) {
@@ -139,13 +167,17 @@ nav {
 
 .hero {
   background-color: var(--hero-bg-color);
+  text-align: center;
+  padding: 188px 0;
 }
 
 .hero-title {
   color: var(--primary-bg-color);
   font-size: 56px;
   line-height: 1.07;
-  text-align: center;
+  /* display: inline-block; */
+  width: 496px;
+  margin: 0 auto 48px;
 }
 
 .hero-button {
@@ -156,6 +188,7 @@ nav {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
+  padding: 16px 32px;
 }
 
 .hero-button:hover,
@@ -163,31 +196,87 @@ nav {
   background-color: var(--hover-button-bg);
 }
 
+/* Features */
+
+.feature-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.feature-list .item {
+  width: 264px;
+  margin-right: 24px;
+}
+
+.feature-list .item:last-child {
+  margin-right: 0;
+}
+
+/* Products */
+
 .section-title {
   color: var(--primary-title-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
+  margin-bottom: 72px;
 }
+
+.products-list {
+  display: flex;
+}
+
+.products-list .item:not(:last-child) {
+  margin-right: 24px;
+}
+/* Team */
 
 .title {
   color: var(--primary-title-color);
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
+  text-align: center;
+  margin-bottom: 8px;
 }
 
 .team {
   background-color: var(--secondary-bg-colour);
 }
 
+.team-list {
+  display: flex;
+}
+
+.team-list .item:not(:last-child) {
+  margin-right: 24px;
+}
+
+.team-portrait {
+  margin-bottom: 24px;
+}
+
+.team-name {
+  background-color: var(--primary-bg-color);
+}
+
+.function {
+  text-align: center;
+  padding-bottom: 32px;
+}
+
+/* Footer */
+
 .footer {
   background-color: var(--hero-bg-color);
+  padding: 100px 0 100px 156px;
 }
 
 .declaration {
   color: var(--primary-bg-color);
+  width: 264px;
+  margin-top: 16px;
 }
 
 .logo-light {
